--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Open Graph-->
+    <meta property="og:title" content="RETO 4 - EDteam" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://carloscdev.github.io/RetoEdTeam4/"
+    />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/46693089/110193867-8fa73100-7e04-11eb-86e0-f5e348c5e77d.png"
+    />
+    <!--Style and Icons-->
     <link rel="icon" type="image/png" href="./images/logo.ico" />
     <link
       rel="stylesheet"
@@ -65,7 +77,7 @@
           </div>
           <div class="questions__container--item">
             <div class="item">
-              <h2>¿Los usuarios tienen horario?</h2>
+              <h2>¿Los cursos tienen horario?</h2>
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="description">
