--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
         </div>
       </div>
     </section>
-
+    <footer>
+      <span class="footer__container">
+        ❮ ❯ by - <a href="https://carlosc.tech" target="_blank">CCDEV</a> 2021
+      </span>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
